views.py split to directory(views/..)

--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -119,8 +119,7 @@
                 <a href="{% url 'pybo:comment_create_answer' answer.id  %}" 
                 class="small"><small>댓글 추가 ..</small></a>
             </div>
-
-
+<!-- answer comment -->
         </div>
     </div>
     {% endfor %}
