--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -1,45 +1,48 @@
-
 {% extends 'base.html' %}
-{% block content %}
 {% load pybo_filter %}
+{% block content %}
 <div class="container my-3">
     <table class="table">
         <thead>
-            <tr class="thead-dark text-center">
-                <th>번호</th>
-                <th style="width:50%">제목</th>
-                <th>글쓴이</th>
-                <th>작성일시</th>
-            </tr>
+        <tr class="text-center thead-dark">
+            <th>번호</th>
+            <th>추천</th>
+            <th style="width:50%">제목</th>
+            <th>글쓴이</th>
+            <th>작성일시</th>
+        </tr>
         </thead>
         <tbody>
-            {%if question_list %}
-            {% for question in question_list%}
-            <tr class="text-center">
-                <td> 
-                    <!-- 질문번호 카운터 -->
-                    {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
-                </td>
-                <td class="text-left">
-                    <a href="{%url 'pybo:detail' question.id %}">{{question.subject}}</a>
-                    {% if question.answer_set.count > 0 %}
-                    <span class="text-danger small ml-2">{{ question.answer_set.count }}</span>
-                    {% endif %}
-                </td>
-                <!-- 글쓴이 표시 -->
-                <td>{{question.author.username}}</td> 
-                <!-- 작성일 표시 -->
-                <td>{{question.create_date}}</td>
-            </tr>
-            {% endfor %}
-            {%else%}
-            <tr><td colspan="3">
-                질문이 없습니다.
-            </td></tr>
-            {% endif %}
+        {% if question_list %}
+        {% for question in question_list %}
+        <tr class="text-center">
+            <td>
+                <!-- 번호 = 전체건수 - 시작인덱스 - 현재인덱스 + 1 -->
+                {{ question_list.paginator.count|sub:question_list.start_index|sub:forloop.counter0|add:1 }}
+            </td>
+            <td>
+                {% if question.voter.all.count > 0 %}
+                <span class="badge badge-warning px-2 py-1">{{ question.voter.all.count }}</span>
+                {% endif %}
+            </td>
+            <td class="text-left">
+                <a href="{% url 'pybo:detail' question.id %}">{{ question.subject }}</a>
+                {% if question.answer_set.count > 0 %}
+                <span class="text-danger small ml-2">{{ question.answer_set.count }}</span>
+                {% endif %}
+            </td>
+            <td>{{ question.author.username }}</td>  <!-- 글쓴이 추가 -->
+            <td>{{ question.create_date }}</td>
+        </tr>
+        {% endfor %}
+        {% else %}
+        <tr>
+            <td colspan="3">질문이 없습니다.</td>
+        </tr>
+        {% endif %}
         </tbody>
     </table>
-    <!-- page start -->
+    <!-- 페이징처리 시작 -->
     <ul class="pagination justify-content-center">
         <!-- 이전페이지 -->
         {% if question_list.has_previous %}
@@ -53,17 +56,17 @@
         {% endif %}
         <!-- 페이지리스트 -->
         {% for page_number in question_list.paginator.page_range %}
-            {% if page_number >= question_list.number|add:-5 and page_number <= question_list.number|add:5 %}
-                {% if page_number == question_list.number %}
-                <li class="page-item active" aria-current="page">
-                    <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-                </li>
-                {% else %}
-                <li class="page-item">
-                    <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
-                </li>
-                {% endif %}
+        {% if page_number >= question_list.number|add:-5 and page_number <= question_list.number|add:5 %}
+            {% if page_number == question_list.number %}
+            <li class="page-item active" aria-current="page">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
+            {% else %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page_number }}">{{ page_number }}</a>
+            </li>
             {% endif %}
+        {% endif %}
         {% endfor %}
         <!-- 다음페이지 -->
         {% if question_list.has_next %}
@@ -76,7 +79,7 @@
         </li>
         {% endif %}
     </ul>
-    <!-- page end -->
-    <a href="{% url 'pybo:question_create'%}" class="btn btn-primary">질문등록하기</a>
+    <!-- 페이징처리 끝 -->
+    <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
 {% endblock %}
